prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://aks-demo-sea-01.vault.azure.net/certificates/kasunrajapaksexyz-cert/52196b75249543f98532ff8e2431550c
  name: vote
  namespace: prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: argo-rollout-demo.kasunrajapakse.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  tls:
  - hosts:
    - argo-rollout-demo.kasunrajapakse.xyz
    secretName: keyvault-vote-argo-rollout-demo
